--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,6 +5,8 @@
 	"scripts": {
 		"validate-env": "node ../scripts/validate-env.js",
 		"dev": "npm run validate-env && react-router dev",
+		"build": "react-router build",
+		"start": "react-router serve",
 		"typecheck": "react-router typegen && tsc --noEmit",
 		"test": "vitest run",
 		"test:watch": "vitest",
