--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,10 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 # IntelliJ based IDEs
 .idea
 
+# local backups
+*.backup
+*.bak
+
 # Finder (MacOS) folder config
 .DS_Store
 
