--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "build": "npm run prisma:generate && tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate --config prisma.config.ts",
-    "prisma:migrate": "prisma migrate dev --config prisma.config.ts"
+    "prisma:migrate": "prisma migrate dev --config prisma.config.ts",
+    "prisma:seed": "prisma db seed --config prisma.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -49,5 +50,9 @@
     "prisma": "^7.2.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
+  }
+  ,
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
